[package]
name = "wg-vankey"
version = "2.0.0"
authors = ["Galen Guyer <galen@galenguyer.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.2"
chrono = "0.4.26"
clap = "2.34.0"
num_cpus = "1.15.0"
rand_core = "0.5"
regex = "1.8.3"
sha2 = "0.10.6"
threadpool = "1.8.1"
x25519-dalek = "1.2.0"
